# gsandia

./: Makefile  Makefile.am  Makefile.in  README.sandia  aclocal.m4  config.h  config.status  configure  configure.ac  configure.ac.bak  gsandia.schemas.bak  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  callbacks.c  callbacks.h  common.h  main.c  sandia-host-browser.c  sandia-host-browser.h  sandia-main-window.c  sandia-main-window.h
src/.deps/: callbacks.Po  main.Po  sandia-host-browser.Po  sandia-main-window.Po
